[gd_scene load_steps=9 format=2]

[ext_resource path="res://Character/Player/HRodPlayers.tscn" type="PackedScene" id=1]
[ext_resource path="res://Terrain/WallTiles.tres" type="TileSet" id=2]
[ext_resource path="res://Misc/FinishZone.gd" type="Script" id=3]
[ext_resource path="res://Stages/Stage.gd" type="Script" id=4]
[ext_resource path="res://UI/StageFinished.tscn" type="PackedScene" id=5]
[ext_resource path="res://Terrain/FloorTiles.tres" type="TileSet" id=6]
[ext_resource path="res://UI/Pause.tscn" type="PackedScene" id=9]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 24, 24, 0, 24, 0, 0, 24, 0 )

[node name="TemplateStage2" type="Node2D"]
script = ExtResource( 4 )

[node name="Floor" type="TileMap" parent="."]
tile_set = ExtResource( 6 )
cell_size = Vector2( 24, 24 )
collision_layer = 16
collision_mask = 0
format = 1
tile_data = PoolIntArray( 65537, 1, 8, 65538, 1, 10, 65539, 1, 10, 65540, 1, 10, 65541, 1, 10, 65542, 1, 11, 65546, 1, 0, 131073, 1, 196616, 131074, 1, 131077, 131075, 1, 131081, 131076, 1, 131081, 131077, 1, 131081, 131078, 1, 131083, 131080, 1, 0, 131082, 1, 131072, 196610, 1, 65544, 196611, 1, 131081, 196612, 1, 131081, 196613, 1, 131081, 196614, 1, 131083, 196616, 1, 65536, 262146, 1, 196616, 262147, 1, 131077, 262148, 1, 131081, 262149, 1, 131081, 262150, 1, 65542, 262151, 1, 10, 262152, 1, 65543, 327683, 1, 196616, 327684, 1, 131077, 327685, 1, 131081, 327686, 1, 131081, 327687, 1, 131081, 327688, 1, 65542, 327689, 1, 11, 393220, 1, 196616, 393221, 1, 196617, 393222, 1, 131077, 393223, 1, 131081, 393224, 1, 131081, 393225, 1, 65542, 393226, 1, 11, 393228, 1, 8, 393229, 1, 11, 458753, 1, 196609, 458754, 1, 196611, 458758, 1, 196616, 458759, 1, 196617, 458760, 1, 196617, 458761, 1, 196617, 458762, 1, 196614, 458763, 1, 196610, 458764, 1, 131080, 458765, 1, 131083, 524298, 0, 0, 524300, 1, 196616, 524301, 1, 196619 )

[node name="Walls" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 24, 24 )
collision_layer = 2
collision_mask = 7
format = 1
tile_data = PoolIntArray( 0, 1, 1, 1, 1, 196610, 2, 1, 196610, 3, 1, 196610, 4, 1, 196610, 5, 1, 196610, 6, 1, 196610, 7, 1, 196610, 8, 1, 196610, 9, 1, 196610, 10, 1, 196610, 11, 1, 3, 65536, 1, 65536, 65547, 1, 65536, 131072, 1, 65536, 131083, 1, 65536, 196608, 1, 65536, 196619, 1, 65536, 262144, 1, 65536, 262155, 1, 65536, 327680, 1, 65536, 327691, 1, 65536, 393216, 1, 65536, 393227, 1, 131072, 458752, 1, 65536, 524288, 1, 131073, 524289, 1, 196610, 524290, 1, 196610, 524291, 1, 196610, 524292, 1, 196610, 524293, 1, 196610, 524294, 1, 196610, 524295, 1, 196610, 524296, 1, 196610, 524297, 1, 196610, 524298, 1, 196610, 524299, 1, 196611 )

[node name="FinishZone" type="Area2D" parent="."]
position = Vector2( 253, 204 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FinishZone"]
position = Vector2( 51.7811, -24.0943 )
shape = SubResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="StageFinished" parent="UI" instance=ExtResource( 5 )]
visible = false

[node name="Pause" parent="UI" instance=ExtResource( 9 )]
visible = false

[node name="RodPlayers" parent="." instance=ExtResource( 1 )]
position = Vector2( 76, 37 )

[node name="Camera2D" type="Camera2D" parent="RodPlayers"]
current = true
limit_left = 0
limit_top = 0
limit_right = 288
limit_bottom = 216

[connection signal="both_player_reached" from="FinishZone" to="." method="_on_FinishZone_both_player_reached"]
[connection signal="player_reached" from="FinishZone" to="." method="_on_FinishZone_player_reached"]
[connection signal="next_level" from="UI/StageFinished" to="." method="next_level"]
[connection signal="return_to_level_select" from="UI/StageFinished" to="." method="exit_stage"]
